--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,8 +24,8 @@
             </div>
             <div class="col-lg-7 col-md-8">
                 <div class="organization-info" style="display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 2%; padding-bottom: 2%;">
-                    <h2>Organization Name Here</h2>
-                    <h3>Slogan or Mission Statement Here</h3>
+                    <h2 style="text-align: center;">University Libraries Digital Guafak</h2>
+                    <h6 style="text-align: center;">The University Libraries Digital Repository strives to preserve digital artifacts and resources from Guam and Micronesia  showcasing indigenous knowledge and Island Wisdom.</h6>
                 </div>
             </div>
     
@@ -36,9 +36,9 @@
             <div class="container-fluid">
                 <ul id="navbar">
                     <li id="nav" class="main-menu-item"><a href="/items"><h4>ITEMS</h4></a></li>
-                    <li id="nav" class="main-menu-item"><a href="https://uogguafak.omeka.net/exhibits"><h4>EXHIBITS</h4></a></li>
+                    <li id="nav" class="main-menu-item"><a href="/exhibits"><h4>EXHIBITS</h4></a></li>
                     <li id="nav" class="main-menu-item"><a href="/collections"><h4>COLLECTIONS</h4></a></li>
-                    <li id="nav" class="main-menu-item"><a href=""><h4>ABOUT US</h4></a></li>
+                    <!-- <li id="nav" class="main-menu-item"><a href="/about"><h4>ABOUT US</h4></a></li> -->
                     <li id="nav" class="main-menu-item"><a href="/search"><h4>SEARCH</h4></a></li>
                     <li id="nav" class="resp-menu-item"><i class="fa-solid fa-bars"></i></li>
                 </ul>
