--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,14 @@
 <div style="height: 10%;"></div>
 
 <script src="../../public/scripts/bootstrap.min.js"></script>
+<script>
+    document.getElementsByClassName("resp-menu-item")[0].addEventListener("click", () => {
+
+        let hamburger = document.getElementById("hamburger-menu");
+        hamburger.classList.toggle("visible");
+        
+
+    })
+</script>
 </body>
 </html>
