--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,3 +45,20 @@
             </div>
         </div>
         <!-- Header -->
+
+        <!-- Responsive Header -->
+
+        <div class="container-fluid" id="hamburger-menu">
+    
+            <div class="container-fluid" style="background-color: #6A0303;" id="hamburger-container">
+                <ul id="hamburger-menu-dropped">
+                    <li id="nav" class="main-menu-item-res"><a href="/items"><h4>ITEMS</h4></a></li>
+                    <li id="nav" class="main-menu-item-res"><a href="/exhibits"><h4>EXHIBITS</h4></a></li>
+                    <li id="nav" class="main-menu-item-res"><a href="/collections"><h4>COLLECTIONS</h4></a></li>
+                    <!-- <li id="nav" class="main-menu-item"><a href="/about"><h4>ABOUT US</h4></a></li> -->
+                    <li id="nav" class="main-menu-item-res"><a href="/search"><h4>SEARCH</h4></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Responsive Header -->
