--- a/views/search.ejs
+++ b/views/search.ejs
@@ -21,39 +21,68 @@
     <% if (paramsExist) { %>
 
         <%- include("searchResultEntry") -%>
+
+        <% if (message.length >= 1) { %>
+        <div class="container-fluid mt-2" style="display: flex; justify-content: center; align-items: center;">
+
+            <div class="container-fluid" style="display: flex; justify-content: center; align-items: center;">
+        
+                    <% if (pageNumber > 1) { %>
+        
+                    <a class="btn btn-primary" href="?search=<%= searchQuery %>&page=<%= Number(pageNumber - 1) %>">Page <%= Number(pageNumber - 1) %></a>
+                    
+                    <% } else {%>
+                    
+                        <a class="btn btn-primary disabled" href="">Previous</a>
+                    
+                    <% } %>
+        
+                        <div class="px-5">
+                            <p style="text-align: center;">You are on page <%= Number(pageNumber) %></p>
+                            <p style="text-align: center;">Jump to:</p>
+                            <input type="number" class="form-control" id="changePage"></input>
+                            <input type="button" class="btn btn-primary" onclick="jumpTo(document.getElementById('changePage').value)" value="Jump"></input>
+                            
+                        </div>
+                    
+                    <% if (!(message.length < 10)) {%>
+        
+                    <a class="btn btn-primary" href="?search=<%= searchQuery %>&page=<%= Number(pageNumber + 1) %>">Page <%= Number(pageNumber + 1) %></a>
+        
+                    <% } else { %>
+                    
+                        <a class="btn btn-primary disabled" href="">Next</a>
+                    
+                    <% } %>
+        
+            </div>
+        
+        </div>
+        <script>
+            function jumpTo(page) {
+                
+                const pageParamValue = new URLSearchParams(window.location.search).get('page');
+
+                if (pageParamValue) {
+
+                    window.location.href = window.location.href.replace(pageParamValue, String(page)); 
+
+                } else {
+
+                    window.location.href = `${window.location.href}?page=${String(page)}`;
+
+                }    
+            }
+        </script>
+        <% } else { %>
+
+            <h1>No results for your search.</h1>
+
+        <% } %>
     
     <% } %>
 
-    <div class="container-fluid">
 
-    <% if (pageNumber !== undefined) {  %>
-
-        <% if (pageNumber > 1) { %>
-            
-            <a class="btn btn-primary" href="?search=<%= searchQuery %>&page=<%= Number(pageNumber - 1) %>">Page <%= Number(pageNumber - 1) %></a>
-    
-        <% } else { %>
-    
-            <a class="btn btn-primary disabled" href="">No previous</a>
-        
-        <% } %>
-        
-        <% if (!(message.length < 10)) { %>
-
-            <a class="btn btn-primary" href="?search=<%= searchQuery %>&page=<%= Number(pageNumber + 1) %>">Page <%= Number(pageNumber + 1) %></a>
-
-        <% } else { %>
-    
-            <a class="btn btn-primary disabled" href="">No next</a>
-        
-        <% } %>
-
-    <% } %>
-    
-        
-    
-    </div>
-</div>
 
 
 
