--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -49,6 +49,18 @@ html, body {
 
 }
 
+#hamburger-menu-dropped {
+
+    list-style-type: none; 
+    margin: 0; 
+    padding: 0; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center;
+
+}
+
 #nav {
 
     margin: 0; 
@@ -107,6 +119,69 @@ html, body {
 
 }
 
+.marc-img {
+
+    height: 100%; 
+    width: 100%; 
+
+}
+
+.contact-info-element {
+
+    padding-top: 5%; 
+    padding-bottom: 5%; 
+    border-right: 2px solid black;
+    
+}
+
+#hamburger-menu {
+
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    display: none; 
+    max-height: 0;
+    transition: all 1s ease-in 1s;
+    padding: 0;
+    margin: 0;
+
+}
+
+.visible {
+
+    display: block !important;
+    max-height: 25% !important;
+
+}
+
+#contacts-list {
+
+    padding-top: 5%; 
+    padding-bottom: 5%; 
+    border-right: 2px solid black;
+
+}
+
+#marc-directions {
+
+    display: flex; 
+    justify-content: left; 
+    flex-direction: column;
+    padding-top: 5%; 
+    padding-bottom: 5%;
+
+}
+
+#contact-us-responsive {
+
+    background-color: #6A0303;
+    margin-top: 25%;
+    box-shadow: 2px 2px 2px black;
+    width: 95%;
+    display: none;
+
+}
+
 div.card:hover {
 
     box-shadow: 5px 5px 5px gray;
@@ -120,17 +195,43 @@ a {
     
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 995px) {
+
+    .visible {
+
+        display: none !important;
+        max-height: 0 !important;
+    
+    }
+
+}
+
+
+@media screen and (max-width: 995px) {
 
     #contact-us {
 
-        margin-top: 30%;
+        display: none;
 
     }
 
     #contact-us-box {
 
+        margin-top: 25%;
         width: 100%;
+        height: 100%;
+        font-size: smaller;
+
+    }
+
+    #contacts-list {
+
+        border: none;
+        border-width: 0;
+        border: 0;
+        padding-top: 0; 
+        padding-bottom: 0; 
+        border-right: none;
 
     }
 
@@ -145,5 +246,155 @@ a {
         visibility: visible;
 
     }
+
+    #contact-us-responsive {
+
+        background-color: #6A0303;
+        margin-top: 30%;
+        box-shadow: 2px 2px 2px black;
+        width: 95%;
+        display: block;
+    
+    }
+
+
+}
+
+@media screen and (max-width: 700px) {
+
+    #contact-us {
+
+        display: none;
+
+    }
+
+    #contact-us-box {
+
+        margin-top: 25%;
+        width: 100%;
+        height: 100%;
+        font-size: smaller;
+
+    }
+
+    #contacts-list {
+
+        border: none;
+        border-width: 0;
+        border: 0;
+        padding-top: 0; 
+        padding-bottom: 0; 
+        border-right: none;
+
+    }
+
+    .main-menu-item {
+
+        display: none !important;
+
+    }
+
+    .resp-menu-item {
+
+        visibility: visible;
+
+    }
+
+    #contact-us-responsive {
+
+        background-color: #6A0303;
+        margin-top: 50%;
+        box-shadow: 2px 2px 2px black;
+        width: 95%;
+        display: block;
+    
+    }
+
+
+}
+
+@media screen and (max-width: 525px) {
+
+    #contact-us {
+
+        display: none;
+
+    }
+
+    #contact-us-box {
+
+        margin-top: 25%;
+        width: 100%;
+        height: 100%;
+        font-size: smaller;
+
+    }
+
+    #contacts-list {
+
+        border: none;
+        border-width: 0;
+        border: 0;
+        padding-top: 2%; 
+        padding-bottom: 2%; 
+        border-right: none;
+
+    }
+
+    .main-menu-item {
+
+        display: none !important;
+
+    }
+
+    .resp-menu-item {
+
+        visibility: visible;
+
+    }
+
+    #contact-us-responsive {
+
+        background-color: #6A0303;
+        margin-top: 70%;
+        box-shadow: 2px 2px 2px black;
+        width: 95%;
+        display: block;
+    
+    }
+
+
+}
+
+@media screen and (max-width: 380px) {
+
+    #contact-us {
+
+        display: none;
+
+    }
+
+    .main-menu-item {
+
+        display: none !important;
+
+    }
+
+    .resp-menu-item {
+
+        visibility: visible;
+
+    }
+
+    #contact-us-responsive {
+
+        background-color: #6A0303;
+        margin-top: 90%;
+        box-shadow: 2px 2px 2px black;
+        width: 95%;
+        display: block;
+    
+    }
+    
 
 }
