--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -5,7 +5,20 @@
     <div class="container" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <img src="<%= photoData[0].file_urls['thumbnail'] %>" alt="Photo" srcset="">
         <p><%= data.id %></p>
-        <p><%= data["element_texts"][0].text %></p>
+
+        <% for (let i = 0; i < data["element_texts"].length; i++) { %>
+            <% if (data["element_texts"][i].hasOwnProperty("element")) {%>
+                <% if (data["element_texts"][i]["element"].hasOwnProperty("name")) { %>
+                    <% if (String(data["element_texts"][i]["element"].name.toLowerCase()) === "title") {%>
+                        <p><%= data["element_texts"][i].text %></p>
+                    <% } else {%>
+                        <% continue; %>
+                    <% } %>
+                <% } %>
+            <% }%>
+        <% } %>
+
+        <!-- <p><%= data["element_texts"][0].text %></p> -->
         <p>Date Added: <%= data.added %></p>
         <p>Date Modified: <%= data.modified %></p>
     
