--- a/views/queryResultEntry.ejs
+++ b/views/queryResultEntry.ejs
@@ -4,7 +4,21 @@
         <div class="card-body mb-2" style="background-color: #96a480; box-shadow: 1px 1px 1px black;">
 
             <% if (type === "Items" || type === "Collections") { %>
-                <h5 class="card-title"><%= message[i]["element_texts"][0].text %></h5>
+                
+                <% if (message[i].hasOwnProperty("element_texts")) {%>
+                    <% for (let j = 0; j < message[i]["element_texts"].length; j++) { %>
+                        <% if (message[i]["element_texts"][j].hasOwnProperty("element")) {%>
+                            <% if (message[i]["element_texts"][j]["element"].hasOwnProperty("name")) { %>
+                                <% if (String(message[i]["element_texts"][j]["element"].name.toLowerCase()) === "title") {%>
+                                    <h5 class="card-title"><%= message[i]["element_texts"][j].text %></h5>
+                                <% } %>
+                            <% } %>
+                        <% }%>
+                    <% } %>
+                <% } %>
+    
+
+                <!-- <h5 class="card-title"><%= message[i]["element_texts"][0].text %></h5> -->
             <% } else {%>
                 <h5 class="card-title"><%= message[i].title %></h5>       
             <% } %>
