Modified static file handling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,14 +7,14 @@
         <div id="carousel" class="carousel slide" data-bs-ride="carousel" style="height: 100%;">
             <div class="carousel-inner" style="height: 100%; width: 100%;">
               <div class="carousel-item active" style="height: inherit; width: inherit;">
-                <div style="height: 100%; width: 100%; background-image: url('../public/assets/placeholder_img.jpg')">
+                <div style="height: 100%; width: 100%; background-image: url('/public/assets/placeholder_img.jpg')">
                 <h1>test</h1></div>
               </div>
               <div class="carousel-item" style="height: inherit; width: inherit;">
-                <div style="height: 100%; width: 100%; background-image: url('../public/assets/placeholder_img.jpg')"></div>
+                <div style="height: 100%; width: 100%; background-image: url('/public/assets/placeholder_img.jpg')"></div>
               </div>
               <div class="carousel-item" style="height: inherit; width: inherit;">
-                <div style="height: 100%; width: 100%; background-image: url('../public/assets/placeholder_img.jpg')"></div>
+                <div style="height: 100%; width: 100%; background-image: url('/public/assets/placeholder_img.jpg')"></div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -116,7 +116,7 @@
         <div class="row" style="padding-bottom: 10px;">
             <h6 style="color: white;">Micronesian Area Research Center</h6>
             <div style="display: flex; justify-content: center; align-items: center; margin: auto;">
-                <a href="https://www.google.com/maps/place/Micronesian+Area+Research+Center/@13.4331917,144.8022696,157m/data=!3m1!1e3!4m5!3m4!1s0x671f9d994e4ffca7:0x465ddd6e1e68b1a1!8m2!3d13.4332765!4d144.8024033"><img class="marc-img" src="./public/marc_directions.jpg" alt="Directions to MARC."></a>
+                <a href="https://www.google.com/maps/place/Micronesian+Area+Research+Center/@13.4331917,144.8022696,157m/data=!3m1!1e3!4m5!3m4!1s0x671f9d994e4ffca7:0x465ddd6e1e68b1a1!8m2!3d13.4332765!4d144.8024033"><img class="marc-img" src="/public/marc_directions.jpg" alt="Directions to MARC."></a>
             </div>
             
         </div>
