--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Guafak</title>
-    <link rel="stylesheet" href="../../public/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="../../public/styles/index.css">
+    <link rel="stylesheet" href="/public/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/styles/index.css">
     <script src="https://kit.fontawesome.com/494790d58a.js" crossorigin="anonymous"></script>
 </head>
 <body>
