Added logos, modified carousel, modified about-us

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,12 +17,11 @@
     
         <div class="container-fluid" id="header-middle">
     
-            <div class="col-lg-5 col-md-4" style="border-right: 2px solid black; padding-top: 2%; padding-bottom: 2%;">
-                <div class="logo" style="display: flex; justify-content: center; align-items: center;">
-                    <a href="/" style="text-decoration: none; color: black;"><h1>Your Logo</h1></a>
+            <div class="col-lg-3 col-md-5 col-md-3 col-3" style="border-right: 2px solid black; display: flex; justify-content: center; align-items: center;">
+                <div class="logo" style="background-image: url('/public/assets/Guafak.png'); height: 100px; width: 100px; background-size: contain;">
                 </div>
             </div>
-            <div class="col-lg-7 col-md-8">
+            <div class="col-lg-9 col-md-7 col-sm-9 col-9">
                 <div class="organization-info" style="display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 2%; padding-bottom: 2%;">
                     <h2 style="text-align: center;">University Libraries Digital Guafak</h2>
                     <h6 style="text-align: center;">The University Libraries Digital Repository strives to preserve digital artifacts and resources from Guam and Micronesia  showcasing indigenous knowledge and Island Wisdom.</h6>
@@ -40,7 +39,7 @@
                     <li id="nav" class="main-menu-item"><a href="/collections"><h4>COLLECTIONS</h4></a></li>
                     <!-- <li id="nav" class="main-menu-item"><a href="/about"><h4>ABOUT US</h4></a></li> -->
                     <li id="nav" class="main-menu-item"><a href="/search"><h4>SEARCH</h4></a></li>
-                    <li id="nav" class="resp-menu-item"><i class="fa-solid fa-bars"></i></li>
+                    <li id="nav" class="resp-menu-item" style="cursor: pointer;"><i class="fa-solid fa-bars"></i></li>
                 </ul>
             </div>
         </div>
