--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,14 +7,13 @@
         <div id="carousel" class="carousel slide" data-bs-ride="carousel" style="height: 100%;">
             <div class="carousel-inner" style="height: 100%; width: 100%;">
               <div class="carousel-item active" style="height: inherit; width: inherit;">
-                <div style="height: 100%; width: 100%; background-image: url('/public/assets/placeholder_img.jpg')">
-                <h1>test</h1></div>
+                <div style="height: 100%; width: 100%; background-image: url('/public/assets/carousel-1.jpg'); background-size: contain;"></div>
               </div>
               <div class="carousel-item" style="height: inherit; width: inherit;">
-                <div style="height: 100%; width: 100%; background-image: url('/public/assets/placeholder_img.jpg')"></div>
+                <div style="height: 100%; width: 100%; background-image: url('/public/assets/carousel-2.jpg'); background-size: contain;"></div>
               </div>
               <div class="carousel-item" style="height: inherit; width: inherit;">
-                <div style="height: 100%; width: 100%; background-image: url('/public/assets/placeholder_img.jpg')"></div>
+                <div style="height: 100%; width: 100%; background-image: url('/public/assets/carousel-3.jpg'); background-size: contain;"></div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -48,7 +47,10 @@
         </div>
         <div class="row" style="width: 100%; height: 100%;">
             <div class="col-lg-12" style="display: flex; align-items: center; justify-content: center; background-color: #96a480; margin-top: 1%; height: 100%; padding-top: 1%; padding-bottom: 1%; box-shadow: 2px 2px 2px black;">
-                <h3>Insert organization biography here.</h3>
+                <p style="text-align: center; font-size: 1rem;">Paid for by the Office of the Governor through the Education Stabilization Fund ESF II. For any inquiries, 
+                    please email Ryan Shook, at shookr@triton.uog.edu, or call him at (671) 735-2342, or Dean Monique Storie, 
+                    at mstorie@triton.uog.edu, or call her at (671) 735-2333, 
+                    and or visit either the University of Guam Richard Flores Taitano Library or the Micronesian Area Research Center.</p>
             </div>    
         </div>
 
