--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,8 +18,8 @@
         <div class="container-fluid" id="header-middle">
     
             <div class="col-lg-3 col-md-5 col-md-3 col-3" style="border-right: 2px solid black; display: flex; justify-content: center; align-items: center;">
-                <div class="logo" style="background-image: url('/public/assets/Guafak.png'); height: 100px; width: 100px; background-size: contain;">
-                </div>
+                <a href="/"><div class="logo" style="background-image: url('/public/assets/Guafak.png'); height: 100px; width: 100px; background-size: contain;">
+                </div></a>
             </div>
             <div class="col-lg-9 col-md-7 col-sm-9 col-9">
                 <div class="organization-info" style="display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 2%; padding-bottom: 2%;">
