--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
     <title>Digital Guafak</title>
     <link rel="stylesheet" href="/public/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/public/styles/index.css">
+    <link rel="manifest" href="/public/manifest.json">
     <script src="https://kit.fontawesome.com/494790d58a.js" crossorigin="anonymous"></script>
 </head>
 <body>
