Web App now installable as a PWA

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 <div style="height: 10%;"></div>
 
 <script src="/public/scripts/bootstrap.min.js"></script>
+<script src="/public/index.js"></script>
 <script>
     document.getElementsByClassName("resp-menu-item")[0].addEventListener("click", () => {
 
